// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `null`;

exports[`NetworkHandler methods should handle disableNetwork 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "type": "disableNetwork",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`NetworkHandler methods should handle enableNetwork 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "type": "enableNetwork",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`NetworkHandler methods should handle setNetworkConnectionInfo 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "payload": Object {
          "network": Object {
            "type": "wifi",
          },
        },
        "type": "SET_NETWORK_CONNECTION_INFO",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;
